[package]

name = "apns"
version = "0.2.0"
authors = ["Mach <back2mach@gmail.com>"]
description = "Library for Apple Push Notification Service."
homepage = "https://github.com/back2mach/apns"
repository = "https://github.com/back2mach/apns"
readme = "README.md"
keywords = ["apns", "apple", "push", "notification"]
license = "Apache-2.0"

[lib]

name = "apns"

[dependencies]

num = "~0.1"
openssl = "~0.9"
byteorder = "~0.4"
rand = "~0.3"
quick-error = "^0.1"
url = "^1.4"
serde = "0.9"
serde_derive = "0.9"
serde_json = "^0.9"
hex = "^0.2"
