[package]
authors = ["Kristoffer Ström <k.stroem@1aim.com>", "Mach <back2mach@gmail.com>"]
name = "apns2"
version = "0.2.1"
license = "Apache-2"

[dependencies]
chrono = "0.4"
error-chain = "0.11"
futures = "0.1"
httpbis = "0.4"
openssl = "0.9"
serde_json = "1.0"
tls-api = "0.1"
tls-api-openssl = "0.1"
